[tool.poetry]
name = "v20"
version = "0.1.0"
description = ""
authors = ["Kyle Widmann <Kyle.Widmann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
ujson = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
bandit = "^1.7.8"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"
types-pyyaml = "^6.0.12.20240311"
types-ujson = "^5.9.0.0"
types-requests = "^2.31.0.20240311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[virtualenvs]
create = true
in-project = true